# APIServer

./: .gitignore  CMakeLists.txt  README.md
cfg/: config.yaml  configer.txt  process.ini  process_ori.ini
include/: config.h  dispatch.h
include/structures/: structs.h  trajectory.h
include/tasks/: imageHandler.h
include/utils/: mat2numpy.h  match_id.h  split.h  track.h  vis.h
pycode/: EnginePy.cpp  EnginePy.hpp  detection.yaml  engine_api.py  engine_api_batch.py  hello.py  test_engine.py  tracker_api.py
pycode_jc/: EnginePy.cpp  engine_api.py
pycode_jc/conf/: config.py
pycode_jc/modules/inferface/: business_logic.py  frame_draw.py  model_deal.py
pycode_jc/modules/models/business_logic/: business_params.py
pycode_jc/modules/models/model_deal/: face_age_gender.py  face_key_point.py  get_single_image_info.py
pycode_jc/modules/utils/: business_utils.py  customer_check.py  decorators.py  frame_utils.py  http_api.py  vis_utils.py
src/: dispatch.cpp
src/box_tracking/: box_tracking.cpp  box_tracking.h
src/box_tracking/Hungarian/: Hungarian.cpp  Hungarian.h
src/cppCommon/: README.md
src/cppCommon/include/: Common.h  FileFunction.h  ProcesMutex.txt  Singleton.h  StringFunction.h  noncopyable.h  protoIO.h  pythonCaller.h
src/cppCommon/src/Common/: CMakeCache.txt  CMakeLists.txt  Common.cpp  Makefile  cmake_install.cmake  pythonCaller.cpp
src/tasks/: imageHandler.cpp
src/tensorrtFrame/: CMakeLists.txt  Cuda3DArray.cpp  Cuda3DArray.h  ImagePreprocessor.cu  ImagePreprocessor.h  Readme.md  affineInterface.cu  affineInterface.h  caculate3Dkeypoints.cu  caculate3Dkeypoints.h  constData.h  createDetectionTool.sh  cudaUtility.h  detection.cpp  detection.cpp_  detection.h  detection.h_  engineApi.cpp  engineApi.h  engine_utils.cpp  engine_utils.h  functions4cpp.py  kernel.cu  main.cpp_bk  main.cpp_xxs  mathFunctions.h  model  postDetections.cu  postDetections.h  postPara3DKeyPoints.pb.cc  tensorNet.cpp  tensorNet.h
src/tensorrtFrame/convertProtobufBinary2txt/: CMakeLists.txt  CMakeLists.txt0  FileFunction.h  create.py  createExe.sh  main.cpp  main.cpp0  postPara3DKeyPoints.pb.cc  postPara3DKeyPoints.pb.h  postPara3DKeyPoints.proto  postPara3DKeyPointsProtobufferConvertor  postPara3DKeyPoints_pb2.py  protoIO.h
src/tensorrtFrame/tensorrt6.0_fixbugs/: NvInferPluginUtils.h  parsePReLU.cpp  priorBoxPlugin.cpp
src/utils/: mat2numpy.cpp  match_id.cpp  split.cpp  track.cpp  trajectory.cpp  vis.cpp
src/video_stream/: CMakeLists.txt  config_yaml.h  dsGSTHandler.cpp  dsGSTHandler.h  dsHandler.cpp  dsHandler.cpp_back  dsHandler.cpp_ori  dsHandler.h  ls_vis.h  rtmpHandler.cpp  rtmpHandler.h  singleton.h
src/video_stream/IMV/include/: IMV1.h
src/video_stream/base64/: base64.cpp  base64test  tes.cpp_back
src/video_stream/fishCamHandler/: cameraGHandler.cpp  cameraHandler.cpp  cameraHandler.h
tools/: main.cpp
